[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cjm-workflow-state"
dynamic = ["version"]
description = "SQLite-backed workflow state persistence and undo history for multi-step human-in-the-loop workflows."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "Christian J. Mills", email = "9126128+cj-mills@users.noreply.github.com"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = []

[project.urls]
Repository = "https://github.com/cj-mills/cjm-workflow-state"
Documentation = "https://cj-mills.github.io/cjm-workflow-state"

[project.entry-points.nbdev]
cjm_workflow_state = "cjm_workflow_state._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "cjm_workflow_state.__version__"}

[tool.setuptools.packages.find]
include = ["cjm_workflow_state"]

[tool.nbdev]
